[gd_scene load_steps=2 format=3 uid="uid://dtcbl62vfohhe"]

[ext_resource type="Script" uid="uid://b5rrdsdnckdyh" path="res://addons/godot_core_system/examples/config_demo/config_demo.gd" id="1_x8g4f"]

[node name="ConfigDemo" type="Node2D"]
script = ExtResource("1_x8g4f")

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatusLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 46.0
grow_horizontal = 2
horizontal_alignment = 1

[node name="ConfigTree" type="Tree" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="HBoxContainer" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="UI/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "自动保存：是"

[node name="ModifyButton" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "修改配置"

[node name="SaveButton" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "保存配置"

[node name="ResetButton" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "重置配置"

[connection signal="pressed" from="UI/Buttons/ModifyButton" to="." method="_on_modify_button_pressed"]
[connection signal="pressed" from="UI/Buttons/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="UI/Buttons/ResetButton" to="." method="_on_reset_button_pressed"]
